# shmemvv

./: .gitignore  BUILD.sh  CLEAN.sh  CMakeLists.txt  Dockerfile  Doxyfile  FORMAT.sh  LICENSE  README.md  RUN.sh  TEST.sh  TODO.txt  hostfile.txt  shmemvv.sh  todo.txt
src/: CMakeLists.txt  log.c  main.cpp  routines.c  routines.cpp  shmemvv.c  shmemvv.cpp  shmemvv.hpp
src/include/: datatypes.h  log.h  routines.h  routines.hpp  shmemvv.h  shmemvv.hpp  tests.h  type_tables.h
src/tests/: CMakeLists.txt
src/tests/atomics/: CMakeLists.txt  atomics_tests.cpp  atomics_tests.h  atomics_tests.hpp  c11_atomics_tests.c  c11_atomics_tests.h  cxx_atomics_tests.cpp  cxx_atomics_tests.h
src/tests/collectives/: CMakeLists.txt  c11_collectives_tests.c  c11_collectives_tests.h  collectives_tests.cpp  collectives_tests.h  collectives_tests.hpp  cxx_collectives_tests.cpp  cxx_collectives_tests.h
src/tests/comms/: CMakeLists.txt  comms_tests.cpp  comms_tests.h  comms_tests.hpp  cxx_comms_tests.cpp  cxx_comms_tests.h
src/tests/locking/: CMakeLists.txt  cxx_locking_tests.cpp  cxx_locking_tests.h  locking_tests.cpp  locking_tests.h  locking_tests.hpp
src/tests/mem/: CMakeLists.txt  cxx_mem_tests.cpp  cxx_mem_tests.h  mem_tests.cpp  mem_tests.h  mem_tests.hpp
src/tests/mem_ordering/: CMakeLists.txt  cxx_mem_ordering_tests.cpp  cxx_mem_ordering_tests.h  mem_ordering_tests.cpp  mem_ordering_tests.h  mem_ordering_tests.hpp
src/tests/pt2pt/: CMakeLists.txt  c11_pt2pt_tests.c  c11_pt2pt_tests.h  cxx_pt2pt_tests.cpp  cxx_pt2pt_tests.h  pt2pt_tests.cpp  pt2pt_tests.cpp.bk  pt2pt_tests.h  pt2pt_tests.hpp
src/tests/remote/: CMakeLists.txt  c11_remote_tests.c  c11_remote_tests.h  cxx_remote_tests.cpp  cxx_remote_tests.h  remote_tests.cpp  remote_tests.h  remote_tests.hpp
src/tests/setup/: CMakeLists.txt  setup_tests.cpp  setup_tests.cpp.backup  setup_tests.h  setup_tests.hpp
src/tests/signaling/: CMakeLists.txt  c11_signaling_tests.c  c11_signaling_tests.h  cxx_signaling_tests.cpp  cxx_signaling_tests.h  signaling_tests.cpp  signaling_tests.hpp
src/tests/teams/: CMakeLists.txt  cxx_teams_tests.cpp  cxx_teams_tests.h  teams_tests.cpp  teams_tests.h  teams_tests.hpp
src/tests/threads/: CMakeLists.txt  cxx_threads_tests.cpp  cxx_threads_tests.h  threads_tests.cpp  threads_tests.h  threads_tests.hpp
src/unit/: CMakeLists.txt
src/unit/c/: CMakeLists.txt
src/unit/c/atomics/: CMakeLists.txt  c_shmem_atomic_add.c  c_shmem_atomic_and.c  c_shmem_atomic_compare_swap.c  c_shmem_atomic_compare_swap_nbi.c  c_shmem_atomic_fetch.c  c_shmem_atomic_fetch_add.c  c_shmem_atomic_fetch_add_nbi.c  c_shmem_atomic_fetch_and.c  c_shmem_atomic_fetch_and_nbi.c  c_shmem_atomic_fetch_inc.c  c_shmem_atomic_fetch_inc_nbi.c  c_shmem_atomic_fetch_nbi.c  c_shmem_atomic_fetch_or.c  c_shmem_atomic_fetch_or_nbi.c  c_shmem_atomic_fetch_xor.c  c_shmem_atomic_fetch_xor_nbi.c  c_shmem_atomic_inc.c  c_shmem_atomic_or.c  c_shmem_atomic_set.c  c_shmem_atomic_swap.c  c_shmem_atomic_swap_nbi.c  c_shmem_atomic_xor.c
src/unit/c/collectives/: CMakeLists.txt  c_shmem_alltoall.c  c_shmem_alltoallmem.c  c_shmem_alltoalls.c  c_shmem_alltoallsmem.c  c_shmem_broadcast.c  c_shmem_broadcastmem.c  c_shmem_collect.c  c_shmem_collectmem.c  c_shmem_fcollect.c  c_shmem_fcollectmem.c  c_shmem_max_reduce.c  c_shmem_min_reduce.c  c_shmem_prod_reduce.c  c_shmem_reduce.c  c_shmem_sum_reduce.c  c_shmem_sync_all.c  c_shmem_team_sync.c
src/unit/c/ctx/: CMakeLists.txt  c_shmem_ctx_create_destroy.c  c_shmem_ctx_get_team.c  c_shmem_team_create_ctx.c
src/unit/c/locking/: CMakeLists.txt  c_shmem_lock_unlock.c
src/unit/c/memory/: CMakeLists.txt  c_shmem_addr_accessible.c  c_shmem_align.c  c_shmem_calloc.c  c_shmem_fence.c  c_shmem_malloc_free.c  c_shmem_malloc_with_hints.c  c_shmem_ptr.c  c_shmem_quiet.c  c_shmem_realloc.c
src/unit/c/pt2pt_sync/: CMakeLists.txt  c_shmem_signal_wait_until.c  c_shmem_test.c  c_shmem_test_all.c  c_shmem_test_all_vector.c  c_shmem_test_any.c  c_shmem_test_any_vector.c  c_shmem_test_some.c  c_shmem_test_some_vector.c  c_shmem_wait_until.c  c_shmem_wait_until_all.c  c_shmem_wait_until_all_vector.c  c_shmem_wait_until_any.c  c_shmem_wait_until_any_vector.c  c_shmem_wait_until_some.c  c_shmem_wait_until_some_vector.c
src/unit/c/rma/: CMakeLists.txt  c_shmem_g.c  c_shmem_get.c  c_shmem_get_nbi.c  c_shmem_iget.c  c_shmem_iput.c  c_shmem_p.c  c_shmem_put.c  c_shmem_put_nbi.c
src/unit/c/setup/: CMakeLists.txt  c_shmem_info_get_name.c  c_shmem_info_get_version.c  c_shmem_my_pe.c  c_shmem_n_pes.c  c_shmem_pe_accessible.c
src/unit/c/signaling/: CMakeLists.txt  c_shmem_put_signal.c  c_shmem_put_signal_nbi.c  c_shmem_signal_fetch.c
src/unit/c/teams/: CMakeLists.txt  c_shmem_team_destroy.c  c_shmem_team_get_config.c  c_shmem_team_my_pe.c  c_shmem_team_n_pes.c  c_shmem_team_split_2d.c  c_shmem_team_split_strided.c  c_shmem_team_sync.c  c_shmem_team_translate_pe.c
src/unit/c/threads/: CMakeLists.txt  c_shmem_init_thread.c  c_shmem_query_thread.c
src/unit/c11/: CMakeLists.txt
src/unit/c11/atomics/: CMakeLists.txt  c11_shmem_atomic_add.c  c11_shmem_atomic_and.c  c11_shmem_atomic_compare_swap.c  c11_shmem_atomic_compare_swap_nbi.c  c11_shmem_atomic_fetch.c  c11_shmem_atomic_fetch_add.c  c11_shmem_atomic_fetch_add_nbi.c  c11_shmem_atomic_fetch_and.c  c11_shmem_atomic_fetch_and_nbi.c  c11_shmem_atomic_fetch_inc.c  c11_shmem_atomic_fetch_inc_nbi.c  c11_shmem_atomic_fetch_nbi.c  c11_shmem_atomic_fetch_or.c  c11_shmem_atomic_fetch_or_nbi.c  c11_shmem_atomic_fetch_xor.c  c11_shmem_atomic_fetch_xor_nbi.c  c11_shmem_atomic_inc.c  c11_shmem_atomic_or.c  c11_shmem_atomic_set.c  c11_shmem_atomic_swap.c  c11_shmem_atomic_swap_nbi.c  c11_shmem_atomic_xor.c
src/unit/c11/collectives/: CMakeLists.txt  c11_shmem_alltoall.c  c11_shmem_alltoalls.c  c11_shmem_broadcast.c  c11_shmem_collect.c  c11_shmem_fcollect.c  c11_shmem_max_reduce.c  c11_shmem_min_reduce.c  c11_shmem_prod_reduce.c  c11_shmem_reduce.c  c11_shmem_sum_reduce.c  c11_shmem_sync.c  c11_shmem_sync_all.c
src/unit/c11/ctx/: CMakeLists.txt  (+3 more)
src/unit/cxx/: CMakeLists.txt
(+488 files in other folders)
