#####################################
# src/unit/CMakeLists.txt
#####################################

# --- Add subdirectories
add_subdirectory(atomics)
add_subdirectory(collectives)
add_subdirectory(comms)
add_subdirectory(locking)
add_subdirectory(mem)
add_subdirectory(mem_ordering)
add_subdirectory(pt2pt)
add_subdirectory(remote)
add_subdirectory(setup)
add_subdirectory(signaling)
add_subdirectory(teams)
add_subdirectory(threads)
