#####################################
# src/unit/c11/CMakeLists.txt
#####################################

# --- Add subdirs
add_subdirectory(atomics)
add_subdirectory(collectives)
add_subdirectory(rma)
add_subdirectory(ctx)
add_subdirectory(locking)
add_subdirectory(memory)
add_subdirectory(pt2pt_sync) 
add_subdirectory(setup)
add_subdirectory(signaling)
add_subdirectory(teams)
add_subdirectory(threads)
