# #####################################
# # src/unit/c/collectives/CMakeLists.txt
# #####################################

# # --- Add the source files
# set(SOURCES
#   ../../../shmemvv.c
  
  
    
# )

# # --- Add the executables
# add_executable(
  
#   ${SOURCES}
# )

# # --- Set the output directory for the executables
# set_target_properties(


#   PROPERTIES
#   RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
# )

# # --- Include directories
# target_include_directories(

#   PRIVATE
#   src/include
# )

# # --- Link any necessary libraries
# target_link_libraries(
  
# )